--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     width: 100%;
     font-size: 17px;
     font-family: 'Press Start 2P', 'Avenir', cursive;
-    background-color: #292b2c;
+    background-color: #000000;
     color: whitesmoke;
 }
 
